--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                 </button>
             </section>
             <!-- Productos Destacados -->
-            <section class="col-12">
-                <div class="pad-2">
-                    <h2 class="text-center">Productos Destacados</h2>
+            <section class="col-12 pb-5">
+                <div class="pad-2 text-center zindex-popover"><h2>Productos Destacados</h2></div>
+                <div>
                     <div class="row justify-content-center">
                         <div id="producto_1" class="card mb-3 producto animate__animated animate__flipinX">
                             <div class="producto_imagen">
@@ -248,7 +248,7 @@
                     <div class="col footer_contacto text-center">
                         <div class="row">
                             <h3><i class="fa-solid fa-house"></i> Dirección</h3>
-                            <span>General Lagos 1335, Valdivia, Chile</span>
+                            <span>Muñoz Hermosilla 1781, Valdivia, Chile</span>
                         </div>
                         <div class="row">
                             <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
@@ -256,7 +256,7 @@
                         </div>
                         <div class="row">
                             <h3><i class="fa-brands fa-whatsapp"></i> Télefono</h3>
-                            <span><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
+                            <span><a href="tel:+56 991350488" target="_blank">+56 991350488</a></span>
                         </div>
                     </div>
                 </div>
