--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -69,67 +69,67 @@
                     <h2>Encuéntranos</h2>
                     <div class="pad-bottom-2">
                         <p>
-                            Etiam a neque nec nibh pulvinar ornare. Vestibulum ut tristique lectus. Aliquam sit amet lectus accumsan, semper tortor at, lobortis tellus. Maecenas luctus augue nulla, non fermentum mauris ultrices sit amet. Quisque commodo sollicitudin dictum. Donec rhoncus consectetur neque, nec efficitur orci tristique in. Morbi non lacus vel elit ultricies tincidunt sed sed purus. Pellentesque id risus quis eros commodo tristique. Aliquam eget lacus faucibus, efficitur leo ac, iaculis lacus.
+                            Para Apapacho el trabajo conjunto y colaborativo es muy importante, por lo cual puedes encontrarnos en dos hermosas tiendas valdivianas, donde además conocerás varias marcas de productos hechos a mano por creadores locales. 
+                        </p>
+                        <p>
+                            Si necesitas ver los colores en vivo, medirte o quieres pasar a conversar un ratito, también te dejamos la dirección de nuestro taller, siempre serás bienvenida.
                         </p>
                     </div>                    
                 </article>
                 <div class="row empresas">
                     <div id="empresa_1" class="card empresa animate__animated animate__backInUp text-center">
                         <div class="empresa_mapa">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d766.2043688678149!2d-73.2457471730257!3d-39.81108585870595!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615edd8ec760b5f%3A0x85b7f3e297e9ec06!2sO&#39;Higgins%20210%2C%20Valdivia%2C%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1652916800555!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                         <div class="empresa_info">
                             <h3>
-                                Mall Plaza de Los Ríos
+                                Buena Fibra Colectiva, Ubuntu
                             </h3>
                             <div class="info_empresa">
                                 <div class="empresa_direccion">
-                                    Arauco 561, Valdivia, Los Ríos.
+                                    O'Higgins 210, Valdivia, Chile
                                 </div>
                                 <div class="empresa_rrss">
-                                    <span><a href="https://www.mplazadelosrios.cl/" target="_blank"><i class="fa-solid fa-globe"></i></a></span>
-                                    <span><a href="https://www.facebook.com/PlazadelosRiosMall" target="_blank"><i class="fa-brands fa-facebook"></i></a></span>
-                                    <span><a href="https://www.instagram.com/plazadelosrios_/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
+                                    <span><a href="https://www.facebook.com/UbuntuValdivia/" target="_blank"><i class="fa-brands fa-facebook"></i></a></span>
+                                    <span><a href="https://www.instagram.com/ubuntuvaldivia.cl/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div id="empresa_2" class="card empresa animate__animated animate__backInUp text-center">
                         <div class="empresa_mapa">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.711632325562!2d-73.24743448462232!3d-39.81345977943977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee763c0ff2cb%3A0xe81db26ae9463697!2sCamilo%20Henr%C3%ADquez%20436%2C%20Valdivia%2C%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1652916995160!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                         <div class="empresa_info">
                             <h3>
-                                Mall Plaza de Los Ríos
+                                T.A.O Valdivia
                             </h3>
                             <div class="info_empresa">
                                 <div class="empresa_direccion">
-                                    Arauco 561, Valdivia, Los Ríos.
+                                    Galería España, local 9, Valdivia, Chile
                                 </div>
                                 <div class="empresa_rrss">
-                                    <span><a href="https://www.mplazadelosrios.cl/" target="_blank"><i class="fa-solid fa-globe"></i></a></span>
-                                    <span><a href="https://www.facebook.com/PlazadelosRiosMall" target="_blank"><i class="fa-brands fa-facebook"></i></a></span>
-                                    <span><a href="https://www.instagram.com/plazadelosrios_/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
+                                    <span><a href="https://www.instagram.com/tao_valdivia/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div id="empresa_3" class="card empresa animate__animated animate__backInUp text-center">
                         <div class="empresa_mapa">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.5969392547286!2d-73.24453228499611!3d-39.8160320590019!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee7741a058ad%3A0xb915891a65459b6c!2sMall%20Plaza%20de%20Los%20R%C3%ADos!5e0!3m2!1ses-419!2scl!4v1647825026070!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.872685796018!2d-73.22601738499549!3d-39.832272059973526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615eef47be263ff%3A0x8636755f497d9946!2zSm9zw6kgTWFyw61hIE11w7FveiBIZXJtb3NpbGxhIDE3ODEsIFZhbGRpdmlhLCBMb3MgUsOtb3M!5e0!3m2!1ses-419!2scl!4v1652917039044!5m2!1ses-419!2scl" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                         <div class="empresa_info">
                             <h3>
-                                Mall Plaza de Los Ríos
+                                Taller de Confección
                             </h3>
                             <div class="info_empresa">
                                 <div class="empresa_direccion">
-                                    Arauco 561, Valdivia, Los Ríos.
+                                    Muñoz Hermosilla 1781 D14, Valdivia, Chile
                                 </div>
                                 <div class="empresa_rrss">
-                                    <span><a href="https://www.mplazadelosrios.cl/" target="_blank"><i class="fa-solid fa-globe"></i></a></span>
-                                    <span><a href="https://www.facebook.com/PlazadelosRiosMall" target="_blank"><i class="fa-brands fa-facebook"></i></a></span>
-                                    <span><a href="https://www.instagram.com/plazadelosrios_/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
+                                    <span><a href="https://apapacho.cl.soyunremix.cl/" target="_blank"><i class="fa-solid fa-globe"></i></a></span>
+                                    <span><a href="https://www.facebook.com/Apapacho-dise%C3%B1o-infantil-100137191742080" target="_blank"><i class="fa-brands fa-facebook"></i></a></span>
+                                    <span><a href="https://www.instagram.com/apapachoval/" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
                                 </div>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                 <div class="col footer_contacto text-center">
                     <div class="row">
                         <h3><i class="fa-solid fa-house"></i> Dirección</h3>
-                        <span>General Lagos 1335, Valdivia, Chile</span>
+                        <span>Muñoz Hermosilla 1781, Valdivia, Chile</span>
                     </div>
                     <div class="row">
                         <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
@@ -161,7 +161,7 @@
                     </div>
                     <div class="row">
                         <h3><i class="fa-brands fa-whatsapp"></i> Télefono</h3>
-                        <span><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
+                        <span><a href="tel:+56 991350488" target="_blank">+56 991350488</a></span>
                     </div>
                 </div>
             </div>
