--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -69,20 +69,14 @@
                     <h2>Quienes Somos</h2>
                     <div class="pad-bottom-2">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue eleifend purus, vel sollicitudin ligula tempus vitae. Nam eleifend purus ac nulla pulvinar mattis. Ut posuere, augue sed malesuada auctor, ipsum purus volutpat odio, vehicula venenatis nisi magna non est. Sed in dolor feugiat, eleifend dui sed, tempus turpis. Integer eu nulla commodo, imperdiet tortor sit amet, interdum lectus. Etiam at ultricies justo, et condimentum arcu. Suspendisse eleifend nulla tellus, at placerat augue tincidunt nec. Donec nunc mi, porttitor sit amet aliquet ac, consequat malesuada sem. Donec lacus tortor, cursus sed faucibus non, porttitor id arcu. Pellentesque quis tortor non eros bibendum porttitor.
+                            Mi nombre es Natalia, soy mamá de Violeta y Tomás, quienes inspiraron e impulsaron la creación de esta marca.
                         </p>
                         <p>
-                            Vestibulum fringilla, lorem sit amet tempus pretium, elit eros malesuada sapien, in varius lectus velit ac ipsum. Curabitur sed sollicitudin elit. Donec a sapien ut orci feugiat accumsan. Vestibulum metus augue, pharetra sed est vel, tincidunt maximus magna. Vestibulum ut sapien in diam eleifend posuere. Quisque vel ligula commodo, consequat dolor in, aliquet nisl. Proin sodales, justo et sodales bibendum, lacus quam dictum ligula, et congue augue magna ac eros.
+                            Apapacho nace junto con la llegada del COVID y las cuarentenas a Chile. Aún no sabíamos bien cómo lidiar con esto, yo me había separado hace dos meses y recién comenzaba a vivir sola con mis dos peques, cuando suspendieron las clases presenciales y nos recomendaron no salir de casa. Mi preocupación principal por esos tiempos era cuidar de ellos, y decidí aislarnos completamente. No recibíamos visitas, no salíamos ni siquiera a hacer las compras del super, y todo lo que necesitábamos lo pedíamos a la puerta de la casa. Así es que cuando me di cuenta de que toda la ropa de invierno que tenían les quedaba chica, ¡encargué telas a Santiago y me puse a coser!
                         </p>
                         <p>
-                            Etiam a neque nec nibh pulvinar ornare. Vestibulum ut tristique lectus. Aliquam sit amet lectus accumsan, semper tortor at, lobortis tellus. Maecenas luctus augue nulla, non fermentum mauris ultrices sit amet. Quisque commodo sollicitudin dictum. Donec rhoncus consectetur neque, nec efficitur orci tristique in. Morbi non lacus vel elit ultricies tincidunt sed sed purus. Pellentesque id risus quis eros commodo tristique. Aliquam eget lacus faucibus, efficitur leo ac, iaculis lacus.
-                        </p>
-                        <p>
-                            Morbi vel erat in massa consequat commodo. Pellentesque egestas est non fermentum faucibus. Donec nec urna nulla. In sed massa sit amet sapien finibus interdum nec ac lectus. Etiam blandit, ligula ac imperdiet pharetra, nibh sapien suscipit velit, vel tristique dolor quam vel lectus. Praesent commodo vulputate dolor, at finibus nisi venenatis eget. Nunc ut tellus velit.
-                        </p>
-                        <p>
-                            Cras imperdiet quis justo ac feugiat. Cras ut elit at nisi ornare feugiat id nec lacus. Integer a odio tincidunt, convallis turpis et, semper dui. Integer sit amet urna orci. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In urna mi, rhoncus at sagittis tincidunt, feugiat quis leo. Fusce vel turpis tristique, malesuada quam et, aliquet felis. Phasellus suscipit velit a ultricies auctor.
-                        </p>
+                            La idea siempre fue hacerles prendas originales, cómodas y confortables, ad hoc al clima valdiviano, y que puedan acompañarlos en sus momentos de exploración y crecimiento. De a poco las ganas de crear fueron aumentando y comenzaron a llegar los pedidos por recomendaciones. Entonces decidí aventurarme a emprender, a dejar los miedos e inseguridades, para dar vida a esta idea tan hermosa que era extender el amor y los cuidados de las madres a través de la ropa, para que sus hijos puedan sentirse cobijados y resguardados mientras juegan, como un gran Apapacho.
+                        </p>                        
                         <p class="text-center">
                             <img src="./../assets/img/apapacho-46.png" alt="Niñas vistiendo Ropa de Apapacho">
                         </p>
@@ -107,7 +101,7 @@
                 <div class="col footer_contacto text-center">
                     <div class="row">
                         <h3><i class="fa-solid fa-house"></i> Dirección</h3>
-                        <span>General Lagos 1335, Valdivia, Chile</span>
+                        <span>Muñoz Hermosilla 1781, Valdivia, Chile</span>
                     </div>
                     <div class="row">
                         <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
@@ -115,7 +109,7 @@
                     </div>
                     <div class="row">
                         <h3><i class="fa-brands fa-whatsapp"></i> Télefono</h3>
-                        <span><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
+                        <span><a href="tel:+56 991350488" target="_blank">+56 991350488</a></span>
                     </div>
                 </div>
             </div>
