--- a/pages/tallas.html
+++ b/pages/tallas.html
@@ -68,7 +68,7 @@
                 <article>
                     <h2>Tallas</h2>
                     <div class="pad-bottom-2">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue eleifend purus, vel sollicitudin ligula tempus vitae. Nam eleifend purus ac nulla pulvinar mattis. Ut posuere, augue sed malesuada auctor, ipsum purus volutpat odio, vehicula venenatis nisi magna non est. Sed in dolor feugiat, eleifend dui sed, tempus turpis. Integer eu nulla commodo, imperdiet tortor sit amet, interdum lectus. Etiam at ultricies justo, et condimentum arcu. Suspendisse eleifend nulla tellus, at placerat augue tincidunt nec. Donec nunc mi, porttitor sit amet aliquet ac, consequat malesuada sem. Donec lacus tortor, cursus sed faucibus non, porttitor id arcu. Pellentesque quis tortor non eros bibendum porttitor.
+                        <p>Las medidas en estas tablas son referenciales y están tomadas justo al cuerpo. No son las medidas de la prenda, por lo que sirve de referencia para cualquier modelo Apapacho. Si alguna de tus medidas se aleja mucho a las de la tabla, cuéntame para guiarte o hacer los cambios necesarios.</p>
                     </div>
                     <div id="talla_cat_1" class="tabla_cat animate__animated animate__flipInX text-center">
                         <h3>Titulo Categoria 1</h3>
@@ -193,7 +193,7 @@
                 <div class="col footer_contacto text-center">
                     <div class="row">
                         <h3><i class="fa-solid fa-house"></i> Dirección</h3>
-                        <span>General Lagos 1335, Valdivia, Chile</span>
+                        <span>Muñoz Hermosilla 1781, Valdivia, Chile</span>
                     </div>
                     <div class="row">
                         <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
@@ -201,7 +201,7 @@
                     </div>
                     <div class="row">
                         <h3><i class="fa-brands fa-whatsapp"></i> Télefono</h3>
-                        <span><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
+                        <span><a href="tel:+56 991350488" target="_blank">+56 991350488</a></span>
                     </div>
                 </div>
             </div>
