--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -101,10 +101,10 @@
                     <h3>Información de Contacto</h3>
                     <article class="aside-flex">
                         <span class="info_contacto"><strong><i class="fa-solid fa-envelope"></i> Correo: </strong><a href="mailto:apapacho@gmail.com" target="_blank">apapacho@gmail.com</a></span>
-                        <span class="info_contacto"><strong><i class="fa-brands fa-whatsapp"></i> Tel: </strong><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
-                        <span class="info_contacto"><strong><i class="fa-solid fa-house"></i> Dirección: </strong>General Lagos 1335, Valdivia, Chile</span>
+                        <span class="info_contacto"><strong><i class="fa-brands fa-whatsapp"></i> Tel: </strong><a href="tel:+56 991350488" target="_blank">+56 991350488</a></span>
+                        <span class="info_contacto"><strong><i class="fa-solid fa-house"></i> Dirección: </strong>Muñoz Hermosilla 1781, Valdivia, Chile</span>
                         <span class="info_contacto">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3064.6787501460176!2d-73.2481017849962!3d-39.81419725889212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615ee766ca4c18b%3A0x4f5626b74cc243a!2sPlaza%20de%20la%20Republica!5e0!3m2!1ses-419!2scl!4v1648439007388!5m2!1ses-419!2scl" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.872685796018!2d-73.22601738499549!3d-39.832272059973526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9615eef47be263ff%3A0x8636755f497d9946!2zSm9zw6kgTWFyw61hIE11w7FveiBIZXJtb3NpbGxhIDE3ODEsIFZhbGRpdmlhLCBMb3MgUsOtb3M!5e0!3m2!1ses-419!2scl!4v1652917039044!5m2!1ses-419!2scl" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </span>
                     </article>
                 </div>                
@@ -125,7 +125,7 @@
                 <div class="col footer_contacto text-center">
                     <div class="row">
                         <h3><i class="fa-solid fa-house"></i> Dirección</h3>
-                        <span>General Lagos 1335, Valdivia, Chile</span>
+                        <span>Muñoz Hermosilla 1781, Valdivia, Chile</span>
                     </div>
                     <div class="row">
                         <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
@@ -133,7 +133,7 @@
                     </div>
                     <div class="row">
                         <h3><i class="fa-brands fa-whatsapp"></i> Télefono</h3>
-                        <span><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
+                        <span><a href="tel:+56 991350488" target="_blank">+56 991350488</a></span>
                     </div>
                 </div>
             </div>
