--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -65,7 +65,7 @@
         <div class="row bs_gutter-x-0 justify-content-center">
             <!-- Pagina: Tienda -->
             <section class="col-md-9">
-                <h2>Tienda</h2>
+                <h2 class="pb-4" >Tienda</h2>
                 <div class="productos">
                     <div class="row">
                         <div id="producto_1" class="card mb-3 producto animate__animated animate__flipinX">
@@ -205,11 +205,11 @@
                                 <span class="rangoPrecios">
                                     <label for="price-min">Minimo:</label>
                                     <span class="rangoPrecios-center">
-                                        0<input type="range" name="price-min" id="price-min" value="100" min="0" max="500">500
+                                        0<input type="range" name="price-min" id="price-min" value="100" min="0" max="500">5000
                                     </span>
                                     <label for="price-max">Maximo:</label>
                                     <span class="rangoPrecios-center">
-                                        501<input type="range" name="price-max" id="price-max" value="800" min="501" max="1000">1000
+                                        5001<input type="range" name="price-max" id="price-max" value="800" min="501" max="1000">50000
                                     </span>
                                 </span>
                                 
@@ -235,7 +235,7 @@
                 <div class="col footer_contacto text-center">
                     <div class="row">
                         <h3><i class="fa-solid fa-house"></i> Dirección</h3>
-                        <span>General Lagos 1335, Valdivia, Chile</span>
+                        <span>Muñoz Hermosilla 1781, Valdivia, Chile</span>
                     </div>
                     <div class="row">
                         <h3><i class="fa-solid fa-envelope"></i> Correo</h3>
@@ -243,7 +243,7 @@
                     </div>
                     <div class="row">
                         <h3><i class="fa-brands fa-whatsapp"></i> Télefono</h3>
-                        <span><a href="tel:+56 987654321" target="_blank">+56 987654321</a></span>
+                        <span><a href="tel:+56 991350488" target="_blank">+56 991350488</a></span>
                     </div>
                 </div>
             </div>
