--- a/pages/tallas.html
+++ b/pages/tallas.html
@@ -71,107 +71,161 @@
                         <p>Las medidas en estas tablas son referenciales y están tomadas justo al cuerpo. No son las medidas de la prenda, por lo que sirve de referencia para cualquier modelo Apapacho. Si alguna de tus medidas se aleja mucho a las de la tabla, cuéntame para guiarte o hacer los cambios necesarios.</p>
                     </div>
                     <div id="talla_cat_1" class="tabla_cat animate__animated animate__flipInX text-center">
-                        <h3>Titulo Categoria 1</h3>
+                        <h3>Bebés</h3>
                         <div class="tabla_overflow">
                             <table class="table table-striped tabla_tallas text-center align-middle">
                                 <thead>
                                     <tr>
                                         <th>Tipo</th>
                                         <th>Talla</th>
-                                        <th>Busto</th>
+                                        <th>Pecho</th>
+                                        <th>Altura</th>
+                                        <th>Cadera</th>
                                         <th>Cintura</th>
-                                        <th>Caderas</th>
-                                        <th>Manga</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td rowspan="4">Categoria 1</td>
-                                        <td>S</td>
-                                        <td>85-92</td>
-                                        <td>69-78</td>
-                                        <td>91-98</td>
-                                        <td>56</td>
+                                        <td rowspan="8">Bebé</td>
+                                        <td>0</td>
+                                        <td>43</td>
+                                        <td>53</td>
+                                        <td>46</td>
+                                        <td>41</td>
                                     </tr>
                                     <tr>
-                                        <td>M</td>
-                                        <td>85-92</td>
-                                        <td>69-78</td>
-                                        <td>91-98</td>
-                                        <td>56</td>
+                                        <td>3m</td>
+                                        <td>45</td>
+                                        <td>61</td>
+                                        <td>48</td>
+                                        <td>43</td>
                                     </tr>
                                     <tr>
-                                        <td>L</td>
-                                        <td>85-92</td>
-                                        <td>69-78</td>
-                                        <td>91-98</td>
-                                        <td>56</td>
+                                        <td>6m</td>
+                                        <td>47</td>
+                                        <td>68</td>
+                                        <td>50</td>
+                                        <td>45</td>
                                     </tr>
                                     <tr>
-                                        <td>XL</td>
-                                        <td>85-92</td>
-                                        <td>69-78</td>
-                                        <td>91-98</td>
-                                        <td>56</td>
+                                        <td>9m</td>
+                                        <td>48</td>
+                                        <td>74</td>
+                                        <td>52</td>
+                                        <td>47</td>
                                     </tr>
-                                    
+                                    <tr>
+                                        <td>12m</td>
+                                        <td>51</td>
+                                        <td>80</td>
+                                        <td>54</td>
+                                        <td>48</td>
+                                    </tr>
+                                    <tr>
+                                        <td>18m</td>
+                                        <td>53</td>
+                                        <td>86</td>
+                                        <td>56</td>
+                                        <td>50</td>
+                                    </tr>
+                                    <tr>
+                                        <td>24m</td>
+                                        <td>54</td>
+                                        <td>92</td>
+                                        <td>58</td>
+                                        <td>52</td>
+                                    </tr>
+                                    <tr>
+                                        <td>36m</td>
+                                        <td>56</td>
+                                        <td>98</td>
+                                        <td>60</td>
+                                        <td>53</td>
                                 </tbody>
                             </table>                            
                         </div>
                         <div class="undertext_table">
-                            Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
+                            Las medidas están tomadas en cms y son sólo una guía para que puedas escoger tu talla con más confianza.
                         </div>
                     </div>
                     <div id="talla_cat_2" class="tabla_cat animate__animated animate__flipInX text-center">
-                        <h3>Titulo Categoria 2</h3>
+                        <h3>Niñxs</h3>
                         <div class="tabla_overflow">
                             <table class="table table-striped tabla_tallas text-center align-middle">
                                 <thead>
                                     <tr>
                                         <th>Tipo</th>
                                         <th>Talla</th>
-                                        <th>Busto</th>
+                                        <th>Pecho</th>
+                                        <th>Altura</th>
+                                        <th>Cadera</th>
                                         <th>Cintura</th>
-                                        <th>Caderas</th>
-                                        <th>Manga</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td rowspan="4">Categoria 2</td>
-                                        <td>S</td>
-                                        <td>85-92</td>
-                                        <td>69-78</td>
-                                        <td>91-98</td>
+                                        <td rowspan="8">Niñx</td>
+                                        <td>2</td>
                                         <td>56</td>
+                                        <td>84</td>
+                                        <td>60</td>
+                                        <td>54</td>
                                     </tr>
                                     <tr>
-                                        <td>M</td>
-                                        <td>85-92</td>
-                                        <td>69-78</td>
-                                        <td>91-98</td>
-                                        <td>56</td>
+                                        <td>4</td>
+                                        <td>62</td>
+                                        <td>102</td>
+                                        <td>64</td>
+                                        <td>58</td>
                                     </tr>
                                     <tr>
-                                        <td>L</td>
-                                        <td>85-92</td>
-                                        <td>69-78</td>
-                                        <td>91-98</td>
-                                        <td>56</td>
+                                        <td>6</td>
+                                        <td>66</td>
+                                        <td>117</td>
+                                        <td>68</td>
+                                        <td>60</td>
                                     </tr>
                                     <tr>
-                                        <td>XL</td>
-                                        <td>85-92</td>
-                                        <td>69-78</td>
-                                        <td>91-98</td>
-                                        <td>56</td>
+                                        <td>8</td>
+                                        <td>70</td>
+                                        <td>124</td>
+                                        <td>72</td>
+                                        <td>62</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>74</td>
+                                        <td>133</td>
+                                        <td>76</td>
+                                        <td>64</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12</td>
+                                        <td>78</td>
+                                        <td>152</td>
+                                        <td>80</td>
+                                        <td>66</td>
+                                    </tr>
+                                    <tr>
+                                        <td>14</td>
+                                        <td>82</td>
+                                        <td>160</td>
+                                        <td>84</td>
+                                        <td>68</td>
+                                    </tr>
+                                    <tr>
+                                        <td>16</td>
+                                        <td>86</td>
+                                        <td>160</td>
+                                        <td>88</td>
+                                        <td>70</td>
                                     </tr>
                                     
                                 </tbody>
                             </table>                            
                         </div>
                         <div class="undertext_table">
-                            Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
+                            Las medidas están tomadas en cms y son sólo una guía para que puedas escoger tu talla con más confianza.
                         </div>
                     </div>
                 </article>
