--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">    
     <title>Tienda | APAPACHO</title>
+    <script src="./../assets/js/tienda.js"></script>
     <meta name="description" content="Tienda de vestuario infantil hecho a mano para apapachar a quienes amas. Produciendo desde el Sur de Chile a baja escala, amando la naturaleza.">
     <meta name="keywords" content="Apapacho,Valdivia,Diseño,Independiente,Tienda,Ropa,Infantil,Niños,Niñas,Niñes,Niño,Niña,Niñe">
 </head>
@@ -80,7 +81,7 @@
                                     </p>
                                 </div>                                    
                             </div>
-                            <a href="#" class="producto_comprar">
+                            <a href="#" onclick="verTienda()" class="producto_comprar">
                                 <div>
                                     <span class="producto_comprar_btn">Comprar</span>
                                 </div>
@@ -98,7 +99,7 @@
                                     </p>
                                 </div>                                    
                             </div>
-                            <a href="#" class="producto_comprar">
+                            <a href="#" onclick="verTienda()" class="producto_comprar">
                                 <div>
                                     <span class="producto_comprar_btn">Comprar</span>
                                 </div>
@@ -116,7 +117,7 @@
                                     </p>
                                 </div>                                     
                             </div>
-                            <a href="#" class="producto_comprar">
+                            <a href="#" onclick="verTienda()" class="producto_comprar">
                                 <div>
                                     <span class="producto_comprar_btn">Comprar</span>
                                 </div>
@@ -134,7 +135,7 @@
                                     </p>
                                 </div>                                     
                             </div>
-                            <a href="#" class="producto_comprar">
+                            <a href="#" onclick="verTienda()" class="producto_comprar">
                                 <div>
                                     <span class="producto_comprar_btn">Comprar</span>
                                 </div>
@@ -152,7 +153,7 @@
                                     </p>
                                 </div>                                    
                             </div>
-                            <a href="#" class="producto_comprar">
+                            <a href="#" onclick="verTienda()" class="producto_comprar">
                                 <div>
                                     <span class="producto_comprar_btn">Comprar</span>
                                 </div>
